--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <form onsubmit="convertTemperature(event)">
             <div class="input-group">
                 <label for="celsius">Celsius:</label>
-                <input type="text" id="celsius">
+                <input type="text" id="celsius" required>
             </div>
             <div class="input-group">
                 <label for="fahrenheit">Fahrenheit:</label>
